--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -10,6 +10,8 @@ wordpress:
     volumes:
      - ./code:/code
      - ./html:/var/www/html
+     expose:
+     -"8081"	
 mariadb:
     image: mariadb
     environment:
